--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-# CONFIGURACIÓN DEL SERVIDOR
+# CONFIGURACIï¿½N DEL SERVIDOR
 server.port=8089
 
-# CONFIGURACIÓN DE LA BASE DE DATOS (MySQL)
-spring.datasource.url=jdbc:mysql://localhost:3307/gestionalumnos?serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
+# CONFIGURACIï¿½N DE LA BASE DE DATOS (MySQL)
+spring.datasource.url=jdbc:mysql://localhost:3306/gestionalumnos?serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=
 
