--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,25 @@
-server.port=8089
+# Application
+spring.application.name=alumnos
 
-spring.datasource.url=jdbc:mysql://localhost:3306/proyectos1?serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=
+# Database Configuration
+spring.datasource.url=${DATABASE_URL:jdbc:mysql://localhost:3306/soa}
+spring.datasource.username=${DATABASE_USER:root}
+spring.datasource.password=${DATABASE_PASSWORD:}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
-
 spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.format_sql=true
 
+# Thymeleaf
 spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
+# Server
+server.port=${SERVER_PORT:8080}
+
+# Forward headers (para proxies como GitHub Codespaces)
+server.forward-headers-strategy=framework
