--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,8 @@ services:
       DATABASE_PASSWORD: apppass123
       SERVER_PORT: 8080
       SPRING_PROFILES_ACTIVE: docker
+    ports:
+      - "8080:8080"
     networks:
       - alumnos-network
 
